# ApexVelocity

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  release.yml
charts/apexvelocity/: Chart.yaml  values.yaml
charts/apexvelocity/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml
config/: auth.yaml  logging.yaml  materials.json  simulation.yaml  tag_mapping.json
config/vehicle_presets/: compact_car.json  sports_car.json  suv.json  tesla_model_3.json
core/: CMakeLists.txt
core/benchmarks/: benchmark_solver.cpp
core/include/capi/: apex_c_api.h
core/include/physics/: DynamicVehicle.h  PhysicsMath.h  TireModel.h  Types.h  VehicleLoader.h  VelocityProfileSolver.h
core/include/utils/: ConfigManager.h  ThreadPool.h
core/src/bindings/: bindings.cpp
core/src/capi/: apex_c_api.cpp
core/src/physics/: DynamicVehicle.cpp  PhysicsMath.cpp  TireModel.cpp  VehicleLoader.cpp  VelocityProfileSolver.cpp
core/src/utils/: ConfigManager.cpp  ThreadPool.cpp
core/tests/: test_config_physics.cpp  test_solver_physics.cpp
docs/: COORDINATE_DIAGNOSIS.md  GEOMETRY_FIX_NOTES.md  metrics_table.md
python/: README.md  pyproject.toml
python/apexvelocity/: __init__.py  __main__.py  analysis.py  api.py  cli.py  debug_coords.py  export.py  geometry.py  loader.py  osm_fetcher.py  routing.py  uncertainty.py  viz.py
python/apexvelocity/envs/: __init__.py  apex_env.py
python/examples/: benchmark_nurburgring.py  benchmark_suite.py  demo_san_francisco.py
python/tests/: test_cli_solver_path.py  test_config_injection.py  test_demo_paths.py  test_geometry_alignment_invariants.py  test_geometry_projection_roundtrip.py  test_geometry_smoothing.py  test_loader_public_surface.py  test_lombard_alignment.py  test_nurburgring_geometry.py  test_physics_validation.py  test_route_metrics_aggregate.py  test_segment_features_flat_straight.py  test_segment_features_turn_hill.py  test_uncertainty_training.py  test_version.py  test_viz_color_mapping.py
python/validation/: __init__.py  uncertainty_training.py  validate_nuscenes.py
server/: go.mod  go.sum
server/cmd/apex-server/: main.go
server/docs/: docs.go  swagger.json  swagger.yaml
server/internal/api/: handlers.go
server/internal/solver/: bridge.go
